# nerfprep

./: LICENSE  README.md  pyproject.toml
src/nerfprep.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/nerfprep/camera/: __init__.py  camera.py
src/nerfprep/datasets/: colmap.py
src/nerfprep/io/: __init__.py  io.py
src/nerfprep/metrics/: __init__.py  metrics.py
tests/: test_camera.py  test_colmap.py  test_io.py  test_metrics.py
